src/main/java/com/example/barteringandtrading/Error/UserNotFoundException.java
package com.example.barteringandtrading.Error;

public class UserNotFoundException {
}
